# mysql-grantparser-python

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  setup.cfg  tox.ini
mysql_grantparser/: __init__.py  driver.py  exporter.py  parser.py
tests/: conftest.py  utils.py
tests/parser/: test_00-dummy.py  test_10-basic.py  test_11-show-grants-no-identified-by.py  test_12-create-user.py  test_12-same-object-with-max.py
