[metadata]
name = mysql-grantparser
version = attr: mysql_grantparser.__metadata__.__version__
license = MIT
author = HIROSE Masaaki
author_email = hirose31@gmail.com
url = https://github.com/hirose31/mysql-grantparser-python
description = parse MySQL SHOW GRANTS.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = MySQL
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Database

[options]
packages = find:
zip_safe = False
python_requires = >=3.5
install_requires =
    setuptools>=30.3.0
    mysqlclient
setup_requires =
    pytest-runner
tests_requires =
    pytest

[options.packages.find]
exclude =
    junk

[options.extras_require]
dev =
    pytest>=3
    coverage
    tox

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
testpaths = tests

[pycodestyle]
max-line-length = 160

[pep8]
max-line-length = 160

[flake8]
max-line-length = 160
